--- a/hooks/build
+++ b/hooks/build
@@ -2,10 +2,10 @@
 set -euo pipefail
 
 IMAGE_NAME=brimstone/golang
-for v in $(awk '/goRelArch=/{gsub(")","",$1);print $1}' Dockerfile); do
+for v in $(awk '/goRelArch=/{gsub("\)","",$1);print $1}' Dockerfile); do
 # stolen from https://medium.com/microscaling-systems/labelling-automated-builds-on-docker-hub-f3d073fb8e1
 	docker build --build-arg VCS_REF="$(git rev-parse --short HEAD)" \
 				--build-arg BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
-				--build-arg VERSION=$v \
+				--build-arg VERSION="$v" \
 				-t "$IMAGE_NAME:$v" .
 done
