--- a/hooks/build
+++ b/hooks/build
@@ -1,11 +1,15 @@
 #!/bin/bash
 set -euo pipefail
 
-IMAGE_NAME=brimstone/golang
-for v in $(awk '/goRelArch=/{gsub("\)","",$1);print $1}' Dockerfile); do
+IMAGE_NAME=${1:-brimstone/golang}
 # stolen from https://medium.com/microscaling-systems/labelling-automated-builds-on-docker-hub-f3d073fb8e1
-	docker build --build-arg VCS_REF="$(git rev-parse --short HEAD)" \
-				--build-arg BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
-				--build-arg VERSION="$v" \
-				-t "$IMAGE_NAME:$v" .
+docker build --build-arg VCS_REF="$(git rev-parse --short HEAD)" \
+			--build-arg BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
+			-t "$IMAGE_NAME:temp" .
+
+for f in Dockerfile.*; do
+	v="${f##Dockerfile.}"
+	docker build -f "$f" \
+			--build-arg IMAGE_NAME="$IMAGE_NAME" \
+			-t "$IMAGE_NAME:$v" .
 done
