Rework so 'go' commands can be run in the image correctly

--- a/hooks/build
+++ b/hooks/build
@@ -12,4 +12,11 @@ for f in Dockerfile.*; do
 	docker build -f "$f" \
 			--build-arg IMAGE_NAME="$IMAGE_NAME" \
 			-t "$IMAGE_NAME:$v" .
+	docker tag "$IMAGE_NAME:$v" "$IMAGE_NAME:${v%.*}"
 done
+
+docker rmi "$IMAGE_NAME:temp" || true
+
+latest="$(ls Dockerfile.* | sort -r | head -n 1)"
+latest="${latest##Dockerfile.}"
+docker tag "$IMAGE_NAME:$latest" "$IMAGE_NAME:latest"
