sort out GOARCH, so other images can build for other GOARCHs

--- a/Dockerfile.1.10.7
+++ b/Dockerfile.1.10.7
@@ -10,6 +10,8 @@ RUN GOLANG_VERSION=1.10.7 \
  && export PATH="/usr/local/go/bin:$PATH" \
  && go version
 
+ONBUILD ARG GOARCH
+ONBUILD ENV GOARCH=$GOARCH
 ONBUILD ARG REPOSITORY
 ONBUILD WORKDIR /go/src/${REPOSITORY}/
 ONBUILD COPY . .
