--- a/Dockerfile.1.11.5
+++ b/Dockerfile.1.11.5
@@ -1,8 +1,8 @@
 ARG IMAGE_NAME
 FROM ${IMAGE_NAME}:temp
 
-RUN GOLANG_VERSION=1.10.7 \
- && DIGEST='1aabe10919048822f3bb1865f7a22f8b78387a12c03cd573101594bc8fb33579' \
+RUN GOLANG_VERSION=1.11.5 \
+ && DIGEST='ff54aafedff961eb94792487e827515da683d61a5f9482f668008832631e5d25' \
  && wget -O go.tgz "https://golang.org/dl/go${GOLANG_VERSION}.linux-amd64.tar.gz" \
  && echo "${DIGEST} *go.tgz" | sha256sum -c - \
  &&	tar -C /usr/local -xzf go.tgz \
@@ -10,13 +10,19 @@ RUN GOLANG_VERSION=1.10.7 \
  && export PATH="/usr/local/go/bin:$PATH" \
  && go version
 
+
 ONBUILD ARG GOARCH
 ONBUILD ENV GOARCH=$GOARCH
 ONBUILD ARG REPOSITORY
 ONBUILD WORKDIR /go/src/${REPOSITORY}/
-ONBUILD COPY . .
-ONBUILD ARG PACKAGE
 ONBUILD ARG CGO_ENABLED
 ONBUILD ENV CGO_ENABLED=${CGO_ENABLED} \
-            PACKAGE=${PACKAGE}
+            GO111MODULE=on
+ONBUILD COPY go.mod .
+ONBUILD COPY go.sum .
+ONBUILD RUN go mod download
+ONBUILD RUN go list -f '{{if (and ( not .Main) (not .Indirect))}}{{.Path}}@{{.Version}}{{end}}' -m all | xargs -tn 1 go get -v || true
+ONBUILD COPY . .
+ONBUILD ARG PACKAGE
+ONBUILD ENV PACKAGE=${PACKAGE}
 ONBUILD RUN /loader -o /app "${PACKAGE:-}"
