Fix onbuild support

--- a/Dockerfile.1.10.8
+++ b/Dockerfile.1.10.8
@@ -19,4 +19,4 @@ ONBUILD ARG PACKAGE
 ONBUILD ARG CGO_ENABLED
 ONBUILD ENV CGO_ENABLED=${CGO_ENABLED} \
             PACKAGE=${PACKAGE}
-ONBUILD RUN /loader -o /app "${PACKAGE:-}"
+ONBUILD RUN /loader go build -v -o /app "${PACKAGE:-}"
