--- a/test-nocgo/Dockerfile
+++ b/test-nocgo/Dockerfile
@@ -1,6 +1,6 @@
 ARG REPOSITORY=test-nocgo
 ARG IMAGE_NAME
-FROM ${IMAGE_NAME} as builder
+FROM ${IMAGE_NAME}-onbuild as builder
 
 FROM scratch
 COPY --from=builder /app /app
