--- a/hooks/build
+++ b/hooks/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -euo pipefail
 
-IMAGE_NAME=${1:-brimstone/golang}
+IMAGE_NAME=${1:-storjlabs/golang}
 # stolen from https://medium.com/microscaling-systems/labelling-automated-builds-on-docker-hub-f3d073fb8e1
 docker build --build-arg VCS_REF="$(git rev-parse --short HEAD)" \
 			--build-arg BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
